# aios-req-engine

./: .env.example  .gitignore  00_CORE_ENGINEERING_RULES.md  10_LANGGRAPH_SERVICE.md  20_SUPABASE_PGVECTOR.md  30_TESTING_QUALITY.md  AIOS_IMPROVEMENT_PLAN.md  ALL_FIXES_COMPLETE.md  ARCHITECTURE.md  ARCHITECTURE_CLEANUP_PLAN.md  AUTO_UPDATE_FIX.md  CLAUDE.md  DESIGN_GUIDE.md  FIXES_COMPLETE_SUMMARY.md  FRONTEND_REBUILD_PLAN.md  IMPLEMENTATION_PLAN.md  INVESTIGATION_RESULTS.md  PHASE_2B_IMPLEMENTATION_SUMMARY.md  PHASE_2B_USAGE_GUIDE.md  PROPOSAL_WORKFLOW_FIX.md  QUICK_FIXES_SUMMARY.md  QUICK_START.md  READINESS_SCORE_PLAN.md  README.md  RESEARCH_PIPELINE_IMPLEMENTATION.md  SIGNAL_EXTRACTION_IMPROVEMENT_PLAN.md  SIGNAL_PIPELINE_PLAN.md  SIGNAL_PROCESSING_FIXES.md  TEST_RESULTS.md  TEST_RESULTS_PHASE_1.3.md  business-flows-playground.html  check_frontend_data.md  ingest_payload.json  netlify.toml  patel_prd.txt  patel_prd_short.txt  playground-ai-agents.html  playground-ai-team-v2.html  playground-ai-team-v3.html  playground-ai-workbench.html  (+23 more)
.claude/: settings.json
.playwright-mcp/: initial-state.yml  page-2026-03-31T20-34-37-813Z.yml  page-2026-03-31T20-34-50-949Z.yml  page-2026-03-31T20-34-59-925Z.yml  page-2026-03-31T20-35-15-793Z.yml  page-2026-03-31T20-35-24-903Z.yml  page-2026-03-31T20-35-47-829Z.yml  page-2026-03-31T20-36-08-133Z.yml  page-2026-03-31T20-37-23-669Z.yml  page-2026-04-01T07-55-49-085Z.yml  page-2026-04-01T07-56-09-509Z.yml  page-2026-04-01T07-56-25-020Z.yml  page-2026-04-01T07-56-49-069Z.yml  page-2026-04-01T07-57-25-662Z.yml  page-2026-04-01T07-58-03-356Z.yml  page-2026-04-01T07-58-24-778Z.yml  page-2026-04-01T07-58-40-858Z.yml  page-2026-04-01T07-58-54-052Z.yml  (+42 more)
(+1854 files in other folders)
